--- a/index.html
+++ b/index.html
@@ -6,19 +6,51 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SB-Marketing</title>
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="dist/css/master.css">
 </head>
 <body>
   <div id="root">
-    <header>
+    <div class="container">
+      <header>
+        <div class="navbar d-flex pt-4 pb-4">
+          <div class="logo-wrapper">
+            <img src="./dist/img/logo-2.png" alt="Logo">
+          </div>
+          <div class="links-wrapper">
+            <ul class="no-style d-flex">
+              <li>Home</li>
+              <li>About Us</li>
+              <li>Feature</li>
+              <li>Testimonials</li>
+              <li>Contact Us</li>
+              <div class="icon-search">
+                <i class="fas fa-search"></i>
+                
+              </div>
+              <div class="cart-wrapper">
+                <div class="cart-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </div>
+                <div class="cart-number">0</div>
+              </div>
+              <div class="btn-wrapper">
+                <button type="button" name="button">Get Started</button>
+              </div>
+            </ul>
+          </div>
+        </div>
+      </header>
+      <main>
 
-    </header>
-    <main>
+      </main>
+      <footer>
 
-    </main>
-    <footer>
+      </footer>
+    </div>
 
-    </footer>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
