--- a/index.html
+++ b/index.html
@@ -46,7 +46,144 @@
         </div>
       </header>
       <main>
+        <section class="online-marketing d-flex pt-16 pb-4">
+          <div class="online-marketing-wrapper d-flex pr-40p">
+            <div class="online-marketing-img">
+              <img src="./dist/img/24.png" alt="Computer's image">
+            </div>
+            <div class="online-marketing-info">
+              <h3>Online Marketing</h3>
+              <p>It is a long established fact that a reader will be distracted.</p>
+              <ul class="no-style">
+                <li><i class="fas fa-check"></i>SEO</li>
+                <li><i class="fas fa-check"></i>SEM</li>
+                <li><i class="fas fa-check"></i>Website Strategy</li>
+                <li><i class="fas fa-check"></i>Social Management</li>
+              </ul>
+            </div>
+          </div>
+          <div class="online-marketing-wrapper d-flex pr-40p">
+            <div class="online-marketing-img">
+              <img src="./dist/img/24.png" alt="Computer's image">
+            </div>
+            <div class="online-marketing-info">
+              <h3>Online Marketing</h3>
+              <p>It is a long established fact that a reader will be distracted.</p>
+              <ul class="no-style">
+                <li><i class="fas fa-check"></i>SEO</li>
+                <li><i class="fas fa-check"></i>SEM</li>
+                <li><i class="fas fa-check"></i>Website Strategy</li>
+                <li><i class="fas fa-check"></i>Social Management</li>
+              </ul>
+            </div>
+          </div>
+          <div class="online-marketing-wrapper d-flex">
+            <div class="online-marketing-img">
+              <img src="./dist/img/24.png" alt="Computer's image">
+            </div>
+            <div class="online-marketing-info">
+              <h3>Online Marketing</h3>
+              <p>It is a long established fact that a reader will be distracted.</p>
+              <ul class="no-style">
+                <li><i class="fas fa-check"></i>SEO</li>
+                <li><i class="fas fa-check"></i>SEM</li>
+                <li><i class="fas fa-check"></i>Website Strategy</li>
+                <li><i class="fas fa-check"></i>Social Management</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="tips d-flex pb-4">
+          <div class="tips-info">
+            <h3>Get tips tricks on how to skyrocket your sales.</h3>
+            <p>Faff about only a quid blower I don't want no agro bleeding chimney pot burke tosser cras nice one boot fanny!</p>
+            <div class="reporting d-flex">
+              <div class="reporting-img-wrapper">
+                <img src="./dist/img/510.png" alt="">
+              </div>
+              <div class="reporting-text-wrapper">
+                <h4>Reporting Analysis</h4>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              </div>
+            </div>
+            <div class="technical d-flex">
+              <div class="technical-img-wrapper">
+                <img src="./dist/img/511.png" alt="">
+              </div>
+              <div class="technical-text-wrapper">
+                <h4>Technical SEO Audit</h4>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              </div>
+            </div>
+          </div>
+          <div class="tips-img">
+            <img src="./dist/img/509.jpeg" alt="">
+          </div>
+        </section>
+        <section class="features">
+          <div class="features-container">
+            <div class="features-text-wrapper d-flex">
+              <div class="features-text">
+                <h3>Popular features that your business needs</h3>
+                <p>Faff about only a quid blower I don't want no agro bleeding chimney pot burke tosser cras nice one boot fanny!</p>
+              </div>
+              <div class="features-btn">
+                <button type="button" name="button">Explore More Feature</button>
+              </div>
+            </div>
+            <div class="features-cards-wrapper d-flex">
+              <div class="card mr-20p">
+                <h4>Customized Invoices</h4>
+                <div class="card-icon">
+                  <i class="fas fa-chart-line blue"></i>
+                </div>
+              </div>
+              <div class="card mr-20p">
+                <h4>Stock Management</h4>
+                <div class="card-icon">
+                  <i class="far fa-paper-plane orange"></i>
+                </div>
+              </div>
+              <div class="card mr-20p">
+                <h4>Receivable & Payables</h4>
+                <div class="card-icon">
+                  <i class="fas fa-award green"></i>
+                </div>
+              </div>
+              <div class="card">
+                <h4>Manage Buying</h4>
+                <div class="card-icon">
+                  <i class="fas fa-user-tie blue"></i>
+                </div>
+              </div>
+              <div class="card mr-20p">
+                <h4>Powerful & Secure</h4>
+                <div class="card-icon">
+                  <i class="fas fa-network-wired orange"></i>
+                </div>
+              </div>
+              <div class="card mr-20p">
+                <h4>Fastest Return Filing</h4>
+                <div class="card-icon">
+                  <i class="fas fa-award green"></i>
+                </div>
+              </div>
+              <div class="card mr-20p">
+                <h4>Monthly Detailed</h4>
+                <div class="card-icon">
+                  <i class="fas fa-file-signature blue"></i>
+                </div>
+              </div>
+              <div class="card mr-20p">
+                <h4>Product Management</h4>
+                <div class="card-icon">
+                  <i class="far fa-thumbs-up orange"></i>
+                </div>
+              </div>
+            </div>
+          </div>
 
+        </section>
       </main>
       <footer>
 
